# medplt

backend/: .env  .gitignore  data.db  data.db-shm  data.db-wal  main.py  pyproject.toml  tasks.py
backend/app/: __init__.py  mods.py
backend/app/handlers/client/: __init__.py  api.py  asr.py  assist.py  check.py  file.py  image.py  img.py
backend/app/models/: asr.py  medgemma.py
backend/app/utils/: http.py
backend/download/: funasr.py  medgemma.py
backend/handlers/: __init__.py
backend/public/: 200.html
backend/public/_nuxt/: -UxcE3Ig.js  2WxZskQr.js  3-vkgtEL.js  4iYoEx35.js  5xU2jYLy.js  B17t4Mbt.js  B25jdkSb.js  B3Y6bSOT.js  B3eLt_A9.js  B3xDuC8R.js  BKgs2ATE.js  BLefNRq0.js  BM6J9oRQ.js  BMZPBkSi.js  BOlXPHsg.js  BPbDwj_T.js  BRE3uSYE.js  BWiP-TR4.js  BYrQAmaY.js  B_VGWpmo.js  Ba9WOuc9.js  BbFcch84.js  BhPMqvv1.js  Bi19gaXj.js  BmzEMD8e.js  Bphrh_KI.js  BwXzaiRm.js  Bz69BkXo.js  C-lO5xe2.js  C0nZT3yk.js  C4gErKuu.js  C5F93--S.js  C6yYD-7g.js  CA3wWx_9.js  CBheTNdn.js  CD6_mkFO.js  CEbMfD-a.js  CEbQVcMT.js  CIa6fhAL.js  CJIK5dJ4.js  (+98 more)
backend/public/_nuxt/builds/: latest.json
backend/public/_nuxt/builds/meta/: 095cc9b7-8eb4-4a78-ad43-548700cf3cf8.json  88692aba-f4a0-4a9c-a817-7b7d732e8c0e.json  98912df4-5301-42a5-bffd-e18a162cdb5b.json
backend/public/admin/login/: index.html
backend/public/image/: index.html
backend/public/img/: index.html
backend/public/speech/: index.html
backend/public/user/: index.html
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/composables/: useAxios.ts  useClientInit.ts  useRecorder.ts  useStopwatch.ts
frontend/app/layouts/: admin.vue  empty.vue  main.vue
frontend/app/middleware/: layout.global.ts
frontend/app/pages/: assist.vue  chat.vue  check.vue  file.vue  form.vue  history.vue  image.vue  img.vue  index.vue  login.vue  speech.vue  user.vue
frontend/app/pages/admin/: login.vue
frontend/app/plugins/: element-plus-icons.client.ts
