[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "cn2an>=0.5.23",
    "dicom2jpg>=0.1.10",
    "fastapi[all]>=0.116.1",
    "funasr>=1.2.7",
    "httpx>=0.28.1",
    "huggingface-hub>=0.34.4",
    "icecream>=2.1.8",
    "invoke>=2.2.0",
    "modelscope>=1.29.1",
    "pillow>=11.3.0",
    "pyinstaller>=6.15.0",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tortoise-orm>=0.25.1",
    "transformers>=4.56.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
